--- a/TravelClaimsApp/res/layout/activity_add_claim.xml
+++ b/TravelClaimsApp/res/layout/activity_add_claim.xml
@@ -8,9 +8,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AddClaimActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <ListView
+        android:id="@+id/claim_list_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+    </ListView>
 
 </RelativeLayout>
