--- a/TravelClaimsApp/res/menu/add_claim_context_menu.xml
+++ b/TravelClaimsApp/res/menu/add_claim_context_menu.xml
@@ -1,4 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+public boolean onContextItemSelected(MenuItem item) {
+AdapterContextMenuInfo info = (AdapterContextMenuInfo) item.getMenuInfo();
+switch(item.getItemId()) {
+case com.example.claimit123.R.id.removeExpense:
+adapter.remove(adapter.getItem(info.position));
+return true;public boolean onContextItemSelected(MenuItem item) {
+AdapterContextMenuInfo info = (AdapterContextMenuInfo) item.getMenuInfo();
+switch(item.getItemId()) {
+case com.example.claimit123.R.id.removeExpense:
+adapter.remove(adapter.getItem(info.position));
+return true;expenseListViewMenuFlag<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/cmenu_delete_claim"></item>
     <item android:id="@+id/cmenu_addExpense"></item>
