--- a/TravelClaimsApp/res/layout/activity_edit_expense.xml
+++ b/TravelClaimsApp/res/layout/activity_edit_expense.xml
@@ -9,8 +9,28 @@
     tools:context=".EditExpenseActivity" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+
+    <EditText
+        android:id="@+id/editText_test2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:ems="10"
+        android:hint="Test" >
+
+        <requestFocus />
+    </EditText>
+
+    <Spinner
+        android:id="@+id/spinner_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText_test2"
+        android:layout_below="@+id/editText_test2" />
 
 </RelativeLayout>
