--- a/TravelClaimsApp/res/layout/activity_edit_claim.xml
+++ b/TravelClaimsApp/res/layout/activity_edit_claim.xml
@@ -8,30 +8,74 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".EditClaimActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <EditText
+        android:id="@+id/Edit_Claim_Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignRight="@+id/Edit_Claim_Name"
+        android:layout_below="@+id/Edit_Claim_Name"
+        android:ems="10"
+        android:hint="@string/Description"
+        android:inputType="textMultiLine" />
 
     <EditText
-        android:id="@+id/editText_test"
+        android:id="@+id/Edit_Claim_Status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignStart="@+id/Edit_Claim_Description"
+        android:layout_below="@+id/Edit_Claim_Description"
         android:ems="10"
-        android:hint="Test" >
+        android:hint="@string/Status" >
 
         <requestFocus />
     </EditText>
 
+    <Spinner
+        android:id="@+id/StatusSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/Edit_Claim_Status"
+        android:entries="@array/StatusArray" />
+
     <Button
-        android:id="@+id/button_test"
+        android:id="@+id/NewExpense"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/NewExpense" />
+
+    <TextView
+        android:id="@+id/Edit_Claim_ExpenseTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/StatusSpinner"
+        android:layout_below="@+id/StatusSpinner"
+        android:text="@string/Expense"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <ListView
+        android:id="@+id/ExpenseList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/NewExpense"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/Edit_Claim_ExpenseTitle" >
+
+    </ListView>
+
+    <EditText
+        android:id="@+id/Edit_Claim_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editText_test"
-        android:text="Button" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/StatusSpinner"
+        android:ems="10"
+        android:hint="@string/Name" />
 
 </RelativeLayout>
