--- a/TravelClaimsApp/res/layout/activity_main_menu.xml
+++ b/TravelClaimsApp/res/layout/activity_main_menu.xml
@@ -8,9 +8,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainMenuActivity" >
 
-    <TextView
+    <Button
+        android:id="@+id/UserButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="124dp"
+        android:text="@string/User" />
+
+    <Button
+        android:id="@+id/AproverButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/UserButton"
+        android:text="@string/Aprover" />
 
 </RelativeLayout>
