--- a/TravelClaimsApp/res/layout/activity_main_menu.xml
+++ b/TravelClaimsApp/res/layout/activity_main_menu.xml
@@ -19,7 +19,7 @@
         android:text="@string/User" />
 
     <Button
-        android:id="@+id/AproverButton"
+        android:id="@+id/ApproverButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
