Made some minor changes to spelling errors

--- a/TravelClaimsApp/res/layout/activity_main_menu.xml
+++ b/TravelClaimsApp/res/layout/activity_main_menu.xml
@@ -25,6 +25,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/UserButton"
-        android:text="@string/Aprover" />
+        android:text="@string/Approver" />
 
 </RelativeLayout>
