--- a/TravelClaimsApp/res/layout/activity_main_menu.xml
+++ b/TravelClaimsApp/res/layout/activity_main_menu.xml
@@ -19,7 +19,7 @@
         android:text="@string/Login" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/NewPassATextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/LoginButton"
@@ -31,8 +31,8 @@
         android:id="@+id/UsernameEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/NewPassATextView"
+        android:layout_below="@+id/NewPassATextView"
         android:ems="10"
         android:paddingBottom="5dp"
         android:paddingTop="5dp" />
