inprogress of adding functionality to switch between activities, still more to come

--- a/TravelClaimsApp/res/menu/main_menu.xml
+++ b/TravelClaimsApp/res/menu/main_menu.xml
@@ -1,4 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/NewUser" android:title="New User"></item>
+    <item android:id="@+id/SearchMenuButton" android:title="Search" android:onClick="SearchOption"></item>
+    <item android:id="@+id/AddClaimMenuButton" android:title="Add Claims" android:onClick="AddClaimMenu"></item>
 
 </menu>
