--- a/TravelClaimsApp/res/layout/activity_edit_claim.xml
+++ b/TravelClaimsApp/res/layout/activity_edit_claim.xml
@@ -46,6 +46,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:onClick="AddExpenseButton"
         android:text="@string/NewExpense" />
 
     <TextView
