Finish most of the navigation and added date picker for date input

--- a/TravelClaimsApp/res/layout/activity_edit_claim.xml
+++ b/TravelClaimsApp/res/layout/activity_edit_claim.xml
@@ -19,24 +19,13 @@
         android:hint="@string/Description"
         android:inputType="textMultiLine" />
 
-    <EditText
-        android:id="@+id/Edit_Claim_Status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/Edit_Claim_Description"
-        android:layout_below="@+id/Edit_Claim_Description"
-        android:ems="10"
-        android:hint="@string/Status" >
-
-        <requestFocus />
-    </EditText>
-
     <Spinner
         android:id="@+id/StatusSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/Edit_Claim_Status"
+        android:layout_below="@+id/Edit_Claim_Description"
+        android:layout_toRightOf="@+id/ClaimStart"
         android:entries="@array/StatusArray" />
 
     <Button
@@ -53,8 +42,8 @@
         android:id="@+id/Edit_Claim_ExpenseTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/StatusSpinner"
-        android:layout_below="@+id/StatusSpinner"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/ClaimEnd"
         android:text="@string/Expense"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -78,5 +67,28 @@
         android:layout_alignRight="@+id/StatusSpinner"
         android:ems="10"
         android:hint="@string/Name" />
+
+    <EditText
+        android:id="@+id/ClaimStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/StatusSpinner"
+        android:ems="10"
+        android:hint="@string/StartDate"
+        android:inputType="date" >
+
+        <requestFocus />
+    </EditText>
+
+    <EditText
+        android:id="@+id/ClaimEnd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/ClaimStart"
+        android:ems="10"
+        android:hint="@string/Finish"
+        android:inputType="date" />
 
 </RelativeLayout>
