--- a/TravelClaimsApp/res/layout/activity_add_claim.xml
+++ b/TravelClaimsApp/res/layout/activity_add_claim.xml
@@ -24,7 +24,7 @@
         android:layout_alignLeft="@+id/claim_list_listview"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:onClick="AddClaimbutton"
+        android:onClick="AddClaimButton"
         android:text="@string/NewClaim" />
 
     <TextView
