--- a/TravelClaimsApp/res/menu/add_claim.xml
+++ b/TravelClaimsApp/res/menu/add_claim.xml
@@ -6,5 +6,6 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     <item android:id="@+id/SearchMenuButton" android:title="Search" android:onClick="SearchOption"></item>
+    <item android:id="@+id/SignOut" android:title="Sign Out" android:onClick="SignOut"></item>
 
 </menu>
