--- a/TravelClaimsApp/res/menu/expense_list.xml
+++ b/TravelClaimsApp/res/menu/expense_list.xml
@@ -5,5 +5,7 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item android:id="@+id/SearchMenuButton" android:title="Search" android:onClick="SearchOption"></item>
+    <item android:id="@+id/SignOut" android:title="Sign Out" android:onClick="SignOut"></item>
 
 </menu>
