tests for claimlist controller, started on addclaimactivity

--- a/TravelClaimsApp/res/menu/add_claim_context_menu.xml
+++ b/TravelClaimsApp/res/menu/add_claim_context_menu.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/cmenu_delete_claim" android:title="Delete"></item>
     <item android:id="@+id/cmenu_addExpense" android:title="Add Expense"></item>
-    <item android:id="@+id/cmenu_submit_claim" android:title="Submit Claim"></item>
+    <item android:id="@+id/cmenu_submit_claim" android:title="Submit Claim">
+    </item>
+    <item android:id="@+id/cmenu_editExpense"></item>
 </menu>
 
