working on addclaimactivity

--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -30,4 +30,15 @@
         android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+    <LinearLayout
+        android:id="@+id/linearLayout_destinations"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="24dp"
+        android:layout_toRightOf="@+id/claimAdaptor_display_name"
+        android:orientation="vertical" >
+
+    </LinearLayout>
+
 </RelativeLayout>
