working on addclaimactivity

--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -30,15 +31,29 @@
         android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout_destinations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="24dp"
-        android:layout_toRightOf="@+id/claimAdaptor_display_name"
-        android:orientation="vertical" >
+   	<Space
+   	    android:layout_width="wrap_content"
+   	    android:layout_height="wrap_content"
+   	    android:layout_alignLeft="@+id/linearLayout_destinations"
+   	    android:layout_alignTop="@+id/claimAdaptor_status" />
 
-    </LinearLayout>
+   	<LinearLayout
+   	    android:id="@+id/linearLayout_destinations"
+   	    android:layout_width="wrap_content"
+   	    android:layout_height="wrap_content"
+   	    android:layout_below="@+id/claimAdaptor_display_name"
+   	    android:layout_marginLeft="36dp"
+   	    android:layout_toRightOf="@+id/claimAdaptor_status"
+   	    android:orientation="vertical" >
+   	</LinearLayout>
+
+   	<LinearLayout
+   	    android:id="@+id/LinearLayout_tags"
+   	    android:layout_width="wrap_content"
+   	    android:layout_height="wrap_content"
+   	    android:layout_alignParentLeft="true"
+   	    android:layout_below="@+id/linearLayout_destinations" 
+   	    android:orientation="horizontal">
+   	</LinearLayout>
 
 </RelativeLayout>
