--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:text="Medium Text"
+        android:background="#D1D0EA"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -45,6 +46,14 @@
    	    android:layout_marginLeft="36dp"
    	    android:layout_toRightOf="@+id/claimAdaptor_status"
    	    android:orientation="vertical" >
+   	    
+   	     <TextView 
+   	  		android:id="@+id/claimAdaptor_destinations_title"
+   	  		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_alignParentLeft="true"
+        	android:text="Destinations"
+        	android:textStyle="bold"/>
    	</LinearLayout>
 
    	<LinearLayout
@@ -54,6 +63,8 @@
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@+id/linearLayout_destinations" 
    	    android:orientation="horizontal">
+   	   
+   	    
    	</LinearLayout>
 
 </RelativeLayout>
