--- a/TravelClaimsApp/res/layout/activity_create_user.xml
+++ b/TravelClaimsApp/res/layout/activity_create_user.xml
@@ -34,7 +34,7 @@
         android:ems="10" />
 
     <EditText
-        android:id="@+id/NewPassAEditView"
+        android:id="@+id/NewPassAEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -56,7 +56,7 @@
         android:id="@+id/NewPassATextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/NewPassAEditView"
+        android:layout_alignLeft="@+id/NewPassAEditText"
         android:layout_below="@+id/NewPasswordEditText"
         android:paddingTop="5dp"
         android:text="@string/PasswordAgain" />
@@ -65,17 +65,17 @@
         android:id="@+id/CreateUserButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/NewPassAEditView"
+        android:layout_alignLeft="@+id/NewPassAEditText"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:paddingTop="5dp"
         android:text="@string/CreateUser" />
 
     <CheckBox
-        android:id="@+id/checkBox1"
+        android:id="@+id/ApproverCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/NewPassAEditView"
+        android:layout_below="@+id/NewPassAEditText"
         android:text="@string/Approver" />
 
 </RelativeLayout>
