--- a/TravelClaimsApp/res/layout/claim_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/claim_list_adaptor.xml
@@ -47,24 +47,24 @@
    	    android:layout_toRightOf="@+id/claimAdaptor_status"
    	    android:orientation="vertical" >
    	    
-   	     <TextView 
-   	  		android:id="@+id/claimAdaptor_destinations_title"
-   	  		android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_alignParentLeft="true"
-        	android:text="Destinations"
-        	android:textStyle="bold"/>
    	</LinearLayout>
 
    	<LinearLayout
    	    android:id="@+id/LinearLayout_tags"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
+   	    android:layout_below="@+id/LinearLayout_amounts"
    	    android:layout_alignParentLeft="true"
-   	    android:layout_below="@+id/linearLayout_destinations" 
-   	    android:orientation="horizontal">
-   	   
-   	    
+   	    android:orientation="horizontal" >
+   	</LinearLayout>
+
+   	<LinearLayout
+   	    android:id="@+id/LinearLayout_amounts"
+   	    android:layout_width="wrap_content"
+   	    android:layout_height="wrap_content"
+   	    android:layout_alignParentLeft="true"
+   	    android:layout_below="@+id/claimAdaptor_startDate"
+   	    android:orientation="vertical" >
    	</LinearLayout>
 
 </RelativeLayout>
