--- a/TravelClaimsApp/res/layout/tag_list_adaptor.xml
+++ b/TravelClaimsApp/res/layout/tag_list_adaptor.xml
@@ -4,21 +4,12 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/destAdaptor_location"
+        android:id="@+id/tagAdaptor_tagName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/destAdaptor_reason"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/destAdaptor_location"
-        android:text="Medium Text"
+        android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
