--- a/TravelClaimsApp/res/layout/activity_main_menu.xml
+++ b/TravelClaimsApp/res/layout/activity_main_menu.xml
@@ -38,7 +38,7 @@
         android:paddingTop="5dp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/expenseAdaptor_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/UsernameEditText"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/expenseAdaptor_date"
         android:ems="10"
         android:inputType="textPassword"
         android:paddingBottom="5dp"
